envoy_templates/listeners/http2_tls_listener.yaml
name: $L_NAME
address:
  socket_address:
    protocol: TCP
    address: 0.0.0.0 
    port_value: $L_PORT # Port listened on (specified in link specification)
filter_chains:
- 
  # Configures a transport socket protocol like TLS or ALTS.
  # To specify a specific type, a "typed_config" field with valid "@type" name is required.
  transport_socket:
    name: envoy.transport_sockets.tls
    typed_config:
      # A transport socket listening to downstream connections (clients) using TLS.
      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      # TLS contextual information shared by both the client and server.
      common_tls_context:
        # A list of TLS certificates that can be used, clients will only choose a single one per session.
        tls_certificates:
          -
            # A datasource from which to read the public key certificate, such as a file or
            # environment variable.
            # $NOTE following 2 files need to be available an specified
            certificate_chain:
              filename: $L_CERT # path of certificate file DEFAULT "/etc/envoy/cert.pem"
            # A datasource from which to read the private key, such as a file or environment variable.
            private_key:
              filename: $L_KEY #path of key file DEFAULT "/etc/envoy/key.pem"
        alpn_protocols:
        - h2,http/1.1
  filters:
  - name: envoy.filters.network.http_connection_manager
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      request_id_extension:
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
      generate_request_id: true
      tracing:
        provider:
          name: envoy.tracers.opentelemetry
          typed_config:
            "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
            grpc_service:
              envoy_grpc:
                cluster_name: jaeger_stats
              timeout: 1s
            service_name: $NODE_ID # node's id seen in Dashboards
      access_log:
      - name: envoy.access_loggers.stdout
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      codec_type: AUTO
      stat_prefix: $L_NAME # listener name seen in Dashboards (this is assigned by generator based on link type)
      http_protocol_options:
        allow_chunked_length: true
      route_config:
        name: route1
        virtual_hosts:
        - name: default 
          domains:
          - "*"
          routes:
          - match:
              prefix: "/"
            route:
            #return 503 after 12m
              max_stream_duration:
                max_stream_duration: 0s
              timeout: 0s
              idle_timeout: 0s
              # $NOTE change or remove retry policy section
              #retry_policy:
              #    retry_on: 5xx,refused-stream,connect-failure,gateway-error,reset
              #    num_retries: 4
              #    per_try_timeout: 180s                
              cluster: $L_NHCLUSTER # next hop cluster ( assigned by generator )
      http_filters:
      - name: envoy.filters.http.router
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
