envoy_templates/listeners/stats_listener.yaml
name: listen_otlp_stats
address:
  socket_address:
    protocol: TCP
    address: 0.0.0.0
    port_value: 4319
filter_chains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      codec_type: AUTO
      stat_prefix: l_otlp_stats
      route_config:
        name: local_route
        virtual_hosts:
        - name: backend_otlp_stats
          domains:
          - "*"
          routes:
          - match:
              prefix: "/"
            route:
              cluster: otlp_stats_dyn
      http_filters:
      - name: envoy.filters.http.router
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
